thay banner va hinh cho 3 page programs

--- a/Sass/junior.scss
+++ b/Sass/junior.scss
@@ -111,7 +111,7 @@ img {
               position: relative;
               width: 260px;
               height: 490px;
-              background: #b11116;
+              background: #21937c;
               border-radius: 22px;
               padding: 50px 24px 24px;
               h3 {
