--- a/Sass/program2.scss
+++ b/Sass/program2.scss
@@ -5,7 +5,7 @@
   font-family: "Roboto Condensed", sans-serif;
   color: var(--primaryColor);
 }
-h2{
+h2 {
   font-family: headerfont;
 }
 img {
@@ -31,7 +31,7 @@ img {
 
     .overview {
       padding: 95px 85px 0 85px;
-      background-color: #fffbef;
+      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18890-1.png);
       .overview__wrap {
         margin-left: auto;
         margin-right: auto;
@@ -52,8 +52,6 @@ img {
           padding-top: 0;
           h2 {
             font-size: 3rem;
-            font-family: headerfont;
-            color: var(--primaryColor);
           }
           .content {
             font-size: 1.5rem;
@@ -64,7 +62,7 @@ img {
     }
 
     .advantage {
-      background-color: #fffbef;
+      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18907-1-1.png);
       padding: 90px 0 40px;
       .ad__container {
         max-width: 1200px;
@@ -218,7 +216,7 @@ img {
     }
 
     .duration {
-      background-color: #fffbef;
+      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18890-1.png);
       padding: 55px 0 145px;
       width: 100%;
       .dur__container {
@@ -894,36 +892,6 @@ img {
 @media only screen and (max-width: 400px) {
   .grid__container {
     .site__content {
-      //   .overview {
-      //     padding: 20px 20px 0 20px;
-      //     .overview__wrap {
-      //       display: flex;
-      //       flex-wrap: wrap;
-      //       padding-right: 10px;
-      //       padding-left: 10px;
-      //       gap: 0;
-
-      //       .box__img {
-      //         img {
-      //           object-fit: cover;
-      //         }
-      //       }
-
-      //       .box__text {
-      //         padding-top: 0;
-      //         h2 {
-      //           font-size: 1.25rem;
-      //         }
-      //         .content {
-      //           height: 200px;
-      //           overflow: scroll;
-      //           text-overflow: ellipsis;
-      //           font-size: 0.8rem;
-      //         }
-      //       }
-      //     }
-      //   }
-
       .advantage {
         .ad__container {
           .ad__wrap {
