--- a/Sass/program.scss
+++ b/Sass/program.scss
@@ -5,7 +5,7 @@
   font-family: "Roboto Condensed", sans-serif;
   color: var(--primaryColor);
 }
-h2{
+h2 {
   font-family: headerfont;
 }
 img {
@@ -264,10 +264,10 @@ img {
             }
           }
           .item-1 {
-            background-color: #003A42;
+            background-color: #003a42;
           }
           .item-2 {
-            background-color: #167F82;
+            background-color: #167f82;
           }
         }
       }
@@ -304,18 +304,18 @@ img {
           .lesson-4,
           .lesson-6,
           .lesson-8 {
-            box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
-            -webkit-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
-            -moz-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
+            box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
+            -webkit-box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
+            -moz-box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
           }
 
           .lesson-1,
           .lesson-3,
           .lesson-5,
           .lesson-7 {
-            box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
-            -webkit-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
-            -moz-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
+            box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
+            -webkit-box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
+            -moz-box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
           }
           .lesson-3,
           .lesson-7 {
@@ -367,10 +367,10 @@ img {
           .slick-pre:hover,
           .slick-next:hover {
             cursor: pointer;
-            background-color: #b11116;
-            box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-            -webkit-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-            -moz-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+            background-color: #167F82;
+            box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
+            -webkit-box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
+            -moz-box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
           }
           .slick-list {
             width: 100%;
@@ -398,7 +398,7 @@ img {
                 }
                 h4 {
                   text-align: start;
-                  color: #ed1c24;
+                  color: var(--primaryColor);
                   font-size: 2rem;
                 }
               }
