--- a/Sass/program2.scss
+++ b/Sass/program2.scss
@@ -31,7 +31,7 @@ img {
 
     .overview {
       padding: 95px 85px 0 85px;
-      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18890-1.png);
+      background-color: #fffbef;
       .overview__wrap {
         margin-left: auto;
         margin-right: auto;
@@ -62,7 +62,7 @@ img {
     }
 
     .advantage {
-      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18907-1-1.png);
+      background-color: #fffbef;
       padding: 90px 0 40px;
       .ad__container {
         max-width: 1200px;
@@ -216,7 +216,7 @@ img {
     }
 
     .duration {
-      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18890-1.png);
+      background-color: #fffbef;
       padding: 55px 0 145px;
       width: 100%;
       .dur__container {
@@ -262,10 +262,10 @@ img {
             }
           }
           .item-1 {
-            background-color: #003A42;
+            background-color: #003a42;
           }
           .item-2 {
-            background-color: #167F82;
+            background-color: #167f82;
           }
         }
       }
@@ -302,18 +302,18 @@ img {
           .lesson-4,
           .lesson-6,
           .lesson-8 {
-            box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
-            -webkit-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
-            -moz-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
+            box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
+            -webkit-box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
+            -moz-box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
           }
 
           .lesson-1,
           .lesson-3,
           .lesson-5,
           .lesson-7 {
-            box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
-            -webkit-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
-            -moz-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
+            box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
+            -webkit-box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
+            -moz-box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
           }
           .lesson-3,
           .lesson-7 {
@@ -365,10 +365,10 @@ img {
           .slick-pre:hover,
           .slick-next:hover {
             cursor: pointer;
-            background-color: #b11116;
-            box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-            -webkit-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-            -moz-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+            background-color: #167F82;
+            box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
+            -webkit-box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
+            -moz-box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
           }
           .slick-list {
             width: 100%;
