--- a/Sass/thcs.scss
+++ b/Sass/thcs.scss
@@ -5,7 +5,7 @@
   font-family: "Roboto Condensed", sans-serif;
   color: var(--primaryColor);
 }
-h2{
+h2 {
   font-family: headerfont;
 }
 img {
@@ -31,7 +31,7 @@ img {
 
     .overview {
       padding: 95px 85px 0 85px;
-      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18890-1.png);
+      background-color: #fffbef;
       .overview__wrap {
         margin-left: auto;
         margin-right: auto;
@@ -62,7 +62,7 @@ img {
     }
 
     .advantage {
-      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18907-1-1.png);
+      background-color: #fffbef;
       padding: 90px 0 40px;
       .ad__container {
         max-width: 1200px;
@@ -110,7 +110,6 @@ img {
             height: 530px;
             border-radius: 22px;
             .ad__item__wrap {
-
               left: 5px;
               top: 5px;
               position: relative;
@@ -145,32 +144,30 @@ img {
                 }
               }
             }
-
-
           }
-          .item-1{
-            .ad__item__wrap{
-              h3{
+          .item-1 {
+            .ad__item__wrap {
+              h3 {
                 // display: none;
                 margin-bottom: 0px;
               }
-              p{
+              p {
                 font-size: 0.9rem;
                 line-height: 24px;
               }
             }
           }
-          .item-2{
-            .ad__item__wrap{
-              p{
+          .item-2 {
+            .ad__item__wrap {
+              p {
                 font-size: 1rem;
                 line-height: 23px;
               }
             }
           }
-          .item-3{
-            .ad__item__wrap{
-              p{
+          .item-3 {
+            .ad__item__wrap {
+              p {
                 font-size: 0.9rem;
                 line-height: 18px;
               }
@@ -190,7 +187,8 @@ img {
       margin-right: -50vw;
       overflow: hidden;
       .method__container {
-        background-image: url(/assets/img/patten-02.png);        margin-bottom: 15%;
+        background-image: url(/assets/img/patten-02.png);
+        margin-bottom: 15%;
         padding: 80px 30px 390px 60px;
         // margin-bottom: 280px;
         // background-color: red;
@@ -228,7 +226,7 @@ img {
     }
 
     .duration {
-      background-image: url(https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18890-1.png);
+      background-color: #fffbef;
       padding: 55px 0 145px;
       width: 100%;
       .dur__container {
@@ -274,10 +272,10 @@ img {
             }
           }
           .item-1 {
-            background-color: #003A42;
+            background-color: #003a42;
           }
           .item-2 {
-            background-color: #167F82;
+            background-color: #167f82;
           }
         }
       }
@@ -314,18 +312,18 @@ img {
           .lesson-4,
           .lesson-6,
           .lesson-8 {
-            box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
-            -webkit-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
-            -moz-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
+            box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
+            -webkit-box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
+            -moz-box-shadow: 0px 18px 11px -1px rgba(0, 58, 66, 0.66);
           }
 
           .lesson-1,
           .lesson-3,
           .lesson-5,
           .lesson-7 {
-            box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
-            -webkit-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
-            -moz-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
+            box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
+            -webkit-box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
+            -moz-box-shadow: 0px 18px 11px -1px rgba(33, 147, 124, 0.66);
           }
           .lesson-3,
           .lesson-7 {
@@ -377,10 +375,10 @@ img {
           .slick-pre:hover,
           .slick-next:hover {
             cursor: pointer;
-            background-color: #b11116;
-            box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-            -webkit-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-            -moz-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+            background-color: #167F82;
+            box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
+            -webkit-box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
+            -moz-box-shadow: 1px 0px 28px -2px rgba(22,127,130,0.66);
           }
           .slick-list {
             width: 100%;
@@ -943,19 +941,19 @@ img {
               .ad__item__wrap {
                 width: 240px;
                 height: 100%;
-                img{
+                img {
                   left: 80px;
                 }
-                .icon{
-                  img{
+                .icon {
+                  img {
                     top: -35px;
                     left: 101px;
                   }
                 }
-                h3{
+                h3 {
                   font-size: 1rem;
                 }
-                p{
+                p {
                   font-size: 0.8rem;
                 }
               }
@@ -975,7 +973,7 @@ img {
               width: 10rem;
               height: 10rem;
               padding: 20px;
-              .number{
+              .number {
                 font-size: 50px;
               }
               .text__wrap {
