--- a/Sass/about.scss
+++ b/Sass/about.scss
@@ -218,45 +218,14 @@ main {
       background: var(--background_2);
       width: 50%;
       height: auto;
-      position: relative;
-      width: 50%;
       display: flex;
       align-items: stretch;
       justify-content: center;
-      .move__img-up {
-        animation: moveup ease-in 2s infinite alternate 1s;
-      }
-      .move__img-down {
-        animation: movedown ease-in 2s infinite alternate 1s;
-      }
-      .left__img {
-        position: absolute;
-        left: 0;
-        display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        width: 30%;
-        height: 100%;
-      }
-      .right__img {
-        position: absolute;
-        right: 0;
-        top: 0;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        width: 30%;
-        height: 100%;
-        z-index: 2;
-      }
-      .main__img {
-        position: relative;
+      img {
+        max-width: none;
         width: 100%;
-        // height: 50%;
-        // transform: translate(-50%, -50%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        height: 100%;
+        object-fit: cover;
       }
     }
     .box__content {
@@ -302,23 +271,14 @@ main {
           display: flex;
           align-items: center;
           flex-direction: column;
+          position: relative;
           .box__img {
-            position: relative;
-            width: 40px;
-            height: 40px;
-            z-index: 10;
-          }
-          .box__img::after {
-            content: "";
             position: absolute;
-            background-image: url("/icon/image__reason-item.png");
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 160px;
-            height: 120px;
-            z-index: -1;
-            top: -10px;
-            left: calc(50% - 45px);
+            left: 0;
+            top: -80px;
+            width: 100%;
+            height: 100px;
+            z-index: 10;
           }
           .content {
             width: 100%;
@@ -710,7 +670,6 @@ main {
       flex-wrap: wrap;
       .box__img {
         width: 100%;
-        min-height: 600px;
       }
       .box__content {
         width: 100%;
