--- a/css/homepage.css
+++ b/css/homepage.css
@@ -202,66 +202,20 @@ main .presentation-section .warp__first {
   color: black;
   width: 100%;
   height: auto;
-  background-color: transparent;
-  display: flex;
-  align-items: end;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  height: fit-content;
-  border-bottom: 5px solid var(--primaryColor);
-  overflow: hidden;
-  border-top-right-radius: 24px;
-  border-top-left-radius: 24px;
-  box-shadow: 0px -59px 23px rgba(237, 28, 36, 0.04), 0px -33px 20px rgba(237, 28, 36, 0.02), 0px -15px 15px rgba(237, 28, 36, 0.01), 0px -4px 8px rgba(237, 28, 36, 0.01), 0px 0px 0px rgba(237, 28, 36, 0.01);
-}
-main .presentation-section .warp__first .item {
-  width: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  flex-direction: column;
-  background-color: transparent;
-  padding: 30px 0px;
-}
-main .presentation-section .warp__first .item .box__icon {
-  width: 100%;
-  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-main .presentation-section .warp__first .item .box__icon img {
-  filter: brightness(0);
-}
-main .presentation-section .warp__first .item .box__count {
+main .presentation-section .warp__first .box_video {
   width: 100%;
-  text-align: center;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
 }
-main .presentation-section .warp__first .item .box__count h3,
-main .presentation-section .warp__first .item .box__count .counter {
+main .presentation-section .warp__first .box_video video {
   width: 100%;
-  padding: 0 11%;
-  height: 50px;
-}
-main .presentation-section .warp__first .item .box__count .counter {
-  color: var(--primaryColor);
-  font-size: 1.5em;
-  font-weight: 700;
-}
-main .presentation-section .warp__first .item:hover {
-  transition: var(--animiation);
-  background-color: var(--primaryColor);
-}
-main .presentation-section .warp__first .item:hover .box__count .counter,
-main .presentation-section .warp__first .item:hover .box__count h3 {
-  color: #fff;
-}
-main .presentation-section .warp__first .item:hover img {
-  filter: brightness(10000);
+  height: auto;
 }
 main .presentation-section .warp__last {
   width: 100%;
@@ -327,13 +281,16 @@ main .presentation-section .warp__last .box__content .content {
   border: 2px solid var(--colorText_1);
   border-radius: 15px;
 }
-main .presentation-section .warp__last .box__content .content:before {
+main .presentation-section .warp__last .box__content .content .boxContent_img {
   position: absolute;
-  content: url("https://mathnasium.edu.vn/wp-content/themes/canhcam/images/quote-2.png");
   overflow: initial;
   visibility: initial;
-  top: -36px;
-  left: -10px;
+  width: 100px;
+  height: 100px;
+  background: var(--background_1);
+  top: -33px;
+  left: -45px;
+  transform: rotate(45deg);
 }
 main .studyProcess-section {
   background: var(--background_2);
@@ -464,6 +421,7 @@ main .thinkAbout__section .thinkAbout__category .slick-track .category__item .de
 }
 main .thinkAbout__section .slick-pre,
 main .thinkAbout__section .slick-next {
+  cursor: pointer;
   position: absolute;
   top: 350px;
   border: none;
