--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -132,7 +132,6 @@ main {
     background-size: cover;
     color: var(--colorText_1) !important;
     .wrap__dess {
-      margin-bottom: 110px;
       width: 100%;
       height: auto;
       display: flex;
@@ -211,82 +210,20 @@ main {
       justify-content: center;
       .box_video {
         width: 100%;
-        height: auto;
+        height: 400px;
         display: flex;
         align-items: center;
         justify-content: center;
         video {
           width: 100%;
-          height: auto;
+          height: 100%;
         }
       }
-      // background-color: transparent;
-      // display: flex;
-      // align-items: end;
-      // justify-content: space-between;
-      // flex-wrap: wrap;
-      // height: fit-content;
-      // border-bottom: 5px solid var(--primaryColor);
-      // overflow: hidden;
-      // border-top-right-radius: 24px;
-      // border-top-left-radius: 24px;
-      // box-shadow: 0px -59px 23px rgb(237 28 36 / 4%), 0px -33px 20px rgb(237 28 36 / 2%),
-      //   0px -15px 15px rgb(237 28 36 / 1%), 0px -4px 8px rgb(237 28 36 / 1%), 0px 0px 0px rgb(237 28 36 / 1%);
-      // .item {
-      //   width: calc(100% / 5);
-      //   display: flex;
-      //   align-items: center;
-      //   justify-content: end;
-      //   flex-direction: column;
-      //   background-color: transparent;
-      //   padding: 30px 0px;
-      //   .box__icon {
-      //     width: 100%;
-      //     height: 70px;
-      //     display: flex;
-      //     align-items: center;
-      //     justify-content: center;
-      //     img {
-      //       filter: brightness(0);
-      //     }
-      //   }
-      //   .box__count {
-      //     width: 100%;
-      //     text-align: center;
-      //     display: flex;
-      //     align-items: center;
-      //     justify-content: center;
-      //     flex-direction: column;
-      //     h3,
-      //     .counter {
-      //       width: 100%;
-      //       padding: 0 11%;
-      //       height: 50px;
-      //     }
-      //     .counter {
-      //       color: var(--primaryColor);
-      //       font-size: 1.5em;
-      //       font-weight: 700;
-      //     }
-      //   }
-      // }
-      // .item:hover {
-      //   transition: var(--animiation);
-      //   background-color: var(--primaryColor);
-      // }
-      // .item:hover .box__count .counter,
-      // .item:hover .box__count h3 {
-      //   color: #fff;
-      // }
-      // .item:hover img {
-      //   filter: brightness(10000);
-      // }
     }
     .warp__last {
       width: 100%;
       height: auto;
       background-color: transparent;
-      margin-top: 100px;
       display: flex;
       justify-content: space-between;
       .box__img {
