--- a/css/program2.css
+++ b/css/program2.css
@@ -34,12 +34,12 @@ img {
   gap: 20px;
 }
 .grid__container .site__content .overview .overview__wrap .box__img img {
+  border-radius: 10px;
   width: 100%;
   object-fit: scale-down;
-  border-radius: 10px;
 }
 .grid__container .site__content .overview .overview__wrap .box__text {
-  padding-top: 15%;
+  padding-top: 0;
 }
 .grid__container .site__content .overview .overview__wrap .box__text h2 {
   font-size: 3rem;
@@ -85,7 +85,7 @@ img {
   background: rgb(2, 0, 36);
   background: linear-gradient(49.28deg, #ffffff 20.28%, #bbbbbb 33.45%, #bbbbbb 44.87%, #7c7c7c 58.92%, #ffffff 80.87%, #7c7c7c 93.17%, #ffffff 104.58%);
   width: 270px;
-  height: 530px;
+  height: 500px;
   border-radius: 22px;
 }
 .grid__container .site__content .advantage .ad__container .ad__wrap .ad__item .ad__item__wrap {
@@ -93,7 +93,7 @@ img {
   top: 5px;
   position: relative;
   width: 260px;
-  height: 520px;
+  height: 490px;
   background: #21937c;
   border-radius: 22px;
   padding: 50px 24px 24px;
@@ -102,7 +102,7 @@ img {
   text-align: center;
   color: #fff;
   font-size: 2rem;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .grid__container .site__content .advantage .ad__container .ad__wrap .ad__item .ad__item__wrap p {
   padding-bottom: 1px;
@@ -122,19 +122,13 @@ img {
   width: 45px;
 }
 .grid__container .site__content .advantage .ad__container .ad__wrap .item-1 .ad__item__wrap h3 {
-  margin-bottom: 0px;
+  margin-bottom: 20px;
 }
 .grid__container .site__content .advantage .ad__container .ad__wrap .item-1 .ad__item__wrap p {
-  font-size: 0.9rem;
-  line-height: 24px;
-}
-.grid__container .site__content .advantage .ad__container .ad__wrap .item-2 .ad__item__wrap p {
   font-size: 1rem;
-  line-height: 23px;
 }
 .grid__container .site__content .advantage .ad__container .ad__wrap .item-3 .ad__item__wrap p {
-  font-size: 0.9rem;
-  line-height: 18px;
+  line-height: 25px;
 }
 .grid__container .site__content .method {
   margin-bottom: -120px;
@@ -688,4 +682,4 @@ img {
   .grid__container .site__content .lessons .lessons__container .lessons__wrap .slick-list .slick-track .lesson h4 {
     font-size: 1.15rem;
   }
-}/*# sourceMappingURL=thcs.css.map */
+}/*# sourceMappingURL=program2.css.map */
