--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -210,13 +210,18 @@ main {
       justify-content: center;
       .box_video {
         width: 100%;
-        height: 400px;
+        height: 300px;
+        overflow: hidden;
         display: flex;
         align-items: center;
         justify-content: center;
+        border-bottom: 5px solid var(--background_1);
+        margin: 10px 0;
         video {
           width: 100%;
           height: 100%;
+          border: none;
+          outline: none;
         }
       }
     }
