--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -208,97 +208,27 @@ main {
       display: flex;
       align-items: center;
       justify-content: center;
-      .box_video {
-        width: 100%;
-        height: 300px;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-bottom: 5px solid var(--background_1);
-        margin: 10px 0;
-        video {
-          width: 100%;
-          height: 100%;
-          border: none;
-          outline: none;
-        }
-      }
     }
-    .warp__last {
+  }
+  .video-section {
+    background-color: var(--background_1);
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .box_video {
       width: 100%;
-      height: auto;
-      background-color: transparent;
+      height: 300px;
+      overflow: hidden;
       display: flex;
-      justify-content: space-between;
-      .box__img {
+      align-items: center;
+      justify-content: center;
+      border-bottom: 5px solid var(--background_1);
+      video {
+        width: 100%;
         height: 100%;
-        position: relative;
-        width: 50%;
-        display: flex;
-        align-items: stretch;
-        justify-content: center;
-        .move__img-up {
-          animation: moveup ease-in 2s infinite alternate 1s;
-        }
-        .move__img-down {
-          animation: movedown ease-in 2s infinite alternate 1s;
-        }
-        .left__img {
-          position: absolute;
-          left: 0;
-          display: flex;
-          justify-content: space-around;
-          flex-direction: column;
-          width: 30%;
-          height: 100%;
-        }
-        .right__img {
-          position: absolute;
-          right: 0;
-          top: 0;
-          display: flex;
-          justify-content: space-between;
-          flex-direction: column;
-          width: 30%;
-          height: 100%;
-          z-index: 2;
-        }
-        .main__img {
-          position: relative;
-          width: 100%;
-          // height: 50%;
-          // transform: translate(-50%, -50%);
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-      }
-      .box__content {
-        width: 50%;
-        height: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: transparent;
-        .content {
-          padding: 75px 60px 65px 65px;
-          /* max-width: 445px; */
-          position: relative;
-          border: 2px solid var(--colorText_1);
-          border-radius: 15px;
-          .boxContent_img {
-            position: absolute;
-            overflow: initial;
-            visibility: initial;
-            width: 100px;
-            height: 100px;
-            background: var(--background_1);
-            top: -33px;
-            left: -45px;
-            transform: rotate(45deg);
-          }
-        }
+        border: none;
+        outline: none;
       }
     }
   }
