--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -218,7 +218,7 @@ main {
     justify-content: center;
     .box_video {
       width: 100%;
-      height: 300px;
+      height: 100%;
       overflow: hidden;
       display: flex;
       align-items: center;
