--- a/css/homepage.css
+++ b/css/homepage.css
@@ -214,7 +214,7 @@ main .video-section {
 }
 main .video-section .box_video {
   width: 100%;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
