config footer and homepage

--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -368,8 +368,8 @@ main {
       top: 350px;
       border: none;
       outline: none;
-      color: var(--colorText_3);
-      background: var(--primaryColor);
+      color: var(--colorText_1);
+      background: var(--background_1);
       width: 50px;
       height: 50px;
       border-radius: 50%;
