--- a/css/homepage.css
+++ b/css/homepage.css
@@ -361,8 +361,8 @@ main .thinkAbout__section .slick-next {
   top: 350px;
   border: none;
   outline: none;
-  color: var(--colorText_3);
-  background: var(--primaryColor);
+  color: var(--colorText_1);
+  background: var(--background_1);
   width: 50px;
   height: 50px;
   border-radius: 50%;
